--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -27,13 +27,11 @@
             android:text="@string/agregar_nuevo_contacto" />
     </LinearLayout>
 
-
-    <GridView
-        android:id="@+id/lista_contactos"
-        android:numColumns="2"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_lista_contactos"
         android:layout_below="@id/titulo"
         android:layout_above="@id/contenedor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
