--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -25,11 +25,11 @@
             android:text="Tamaño de letra" />
 
         <EditText
-            android:id="@+id/edittext_color"
+            android:id="@+id/edittext_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
-            android:inputType="" />
+            android:inputType="number|numberDecimal" />
 
     </LinearLayout>
 
@@ -51,7 +51,7 @@
             android:text="Color de fondo" />
 
         <EditText
-            android:id="@+id/edittext_font"
+            android:id="@+id/edittext_color"
             android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
@@ -124,7 +124,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_save_preferences"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
