--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -5,24 +5,25 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/contact_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:background="@color/colorAccent"
         android:orientation="vertical"
         android:padding="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent"
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/layout_card"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0.7"
-                android:background="@android:color/white"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="5dp">
